# translator

./: .gitignore  README.ja.md  README.kr.md  README.md  README.zh.md  package-lock.json  package.json
benchmark/: cli.py  pyproject.toml  quick_test.py  robust_test.py
benchmark/analysis/: report.py  statistics.py  visualization.py
benchmark/config/: settings.yaml
benchmark/results/: quick_test_results.json  robust_test_results.json
benchmark/runners/: base_runner.py  claude_runner.py  execution_runner.py  judge_runner.py
benchmark/scoring/: aggregator.py  automated.py  llm_judge.py  rubrics.py
benchmark/test_cases/api_usage/: TC-API-001.yaml  TC-API-002.yaml  TC-API-003.yaml  TC-API-004.yaml  TC-API-005.yaml  TC-API-006.yaml  TC-API-007.yaml  TC-API-008.yaml  TC-API-009.yaml  TC-API-010.yaml
benchmark/test_cases/architecture/: TC-ARCH-001.yaml  TC-ARCH-002.yaml  TC-ARCH-003.yaml  TC-ARCH-004.yaml  TC-ARCH-005.yaml  TC-ARCH-006.yaml  TC-ARCH-007.yaml  TC-ARCH-008.yaml  TC-ARCH-009.yaml  TC-ARCH-010.yaml
benchmark/test_cases/coding/: TC-CODE-001.yaml  TC-CODE-002.yaml  TC-CODE-003.yaml  TC-CODE-004.yaml  TC-CODE-005.yaml  TC-CODE-006.yaml  TC-CODE-007.yaml  TC-CODE-008.yaml  TC-CODE-009.yaml  TC-CODE-010.yaml
benchmark/test_cases/debugging/: TC-DEBUG-001.yaml  TC-DEBUG-002.yaml  TC-DEBUG-003.yaml  TC-DEBUG-004.yaml  TC-DEBUG-005.yaml  TC-DEBUG-006.yaml  TC-DEBUG-007.yaml  TC-DEBUG-008.yaml  TC-DEBUG-009.yaml  TC-DEBUG-010.yaml
docs/: METHODOLOGY.md  SCORING_RUBRICS.md
plugin/: package.json  tsconfig.json
plugin/.claude-plugin/: plugin.json
(+12 files in other folders)
